[b]Version 0.6.2[/b]:

(2008-06-11)
 * Now the default value for option change_equalizer_on_startup is true
   (users which run the previous svn revision will have to make the change
   manually) but the brightness, contrast... won't be changed on startup 
   if the value is 0.
 * Also be sure that the equalizer dialog is updated just after a file begins
   to play.

(2008-06-10)
 * Renamed the config option "dont_use_eq_options" to 
   "change_equalizer_on_startup" and set it to false as default because 
   it seems some people are having problems with high brightness and contrast.

(2008-06-09)
 * Added the opensubtitles patch by Kamil Dziobek <turbos11@gmail.com> (with
   some modifications). This adds an option in the subtitles menu which 
   allows you to download subtitles for the file you're playing, and another
   one to upload subtitles.

(2008-06-07)
 * Manually removed "<pixmapfunction>qPixmapFromMimeSource</pixmapfunction>"
   from several *.ui files because otherwise the files generated by uic
   would depend on Q3Support.

(2008-06-05)
 * Now if we've got info about the size and aspect ratio (the file has been 
   played before) the main window will be resized before starting to play 
   the file.

(2008-06-04)
 * When entering in fullscreen, the playlist is hidden only if it's in the
   same screen as the main window. (Untested!)

(2008-06-03)
 * Added the possibility to compile smplayer in Windows without the
   file associations code, so it doesn't write anything in the 
   registry (important for a portable app). Just comment the line
   DEFINES += USE_ASSOCIATIONS in smplayer.pro.
 * Another fix for Qt 4.4. The language toolbar wasn't restored
   properly.
 * More work to make smplayer a better portable application (although most of
   the following work on linux, it's intended for windows). If PORTABLE_APP 
   is defined (it can be done with 'qmake DEFINES+=PORTABLE_APP') then: